--- a/backend/apps/warehouse/templates/main_screen/branches_main_screen.html
+++ b/backend/apps/warehouse/templates/main_screen/branches_main_screen.html
@@ -90,7 +90,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="icon">
                                 <i class="ion ion-pie-graph"></i>
                             </div>
-                            <a href="{% url "warehouse_v2:items-list" %}" class="small-box-footer">Подробнее <i
+                            <a href="{% url "warehouse_branch:items-list" %}" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
