--- a/backend/apps/warehouse/templates/snippets/navbar_min.html
+++ b/backend/apps/warehouse/templates/snippets/navbar_min.html
@@ -28,7 +28,7 @@
                     <a href="{% url 'warehouse_branch:transfers-list' %}" class="nav-link">Реестр перемещений</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'warehouse_v2:items-list' %}" class="nav-link">Реестр лекарств</a>
+                    <a href="{% url 'warehouse_branch:items-list' %}" class="nav-link">Реестр лекарств</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Чеки</a>
