--- a/backend/apps/warehouse/templates/items/items_list.html
+++ b/backend/apps/warehouse/templates/items/items_list.html
@@ -93,7 +93,7 @@
                                                 <td>{{ i.income_seria }}</td>
                                                 <td>{{ i.warehouse.name }}</td>
                                                 <td>{{ i.item.unit }}</td>
-                                                <td>{{ i.item.price }}</td>
+                                                <td>{{ i.price }}</td>
                                                 <td>{{ i.quantity }}</td>
                                                 <td>{{ i.item.seria }}</td>
 
