--- a/backend/apps/warehouse/templates/main_screen/main_screen.html
+++ b/backend/apps/warehouse/templates/main_screen/main_screen.html
@@ -115,7 +115,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <!-- ./col -->
                     <div class="col-lg-3 col-6">
                         <!-- small box -->
-                        <div class="small-box bg-danger">
+                        <div class="small-box bg-pink">
                             <div class="inner">
                                 <h3>Чеки</h3>
                                 <p>Unique Visitors</p>
@@ -140,6 +140,22 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <i class="ion ion-pie-graph"></i>
                             </div>
                             <a href="{% url 'warehouse_manual:main_screen' %}" class="small-box-footer">Подробнее <i
+                                    class="fas fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                     <!-- ./col -->
+                    <div class="col-lg-3 col-6">
+                        <!-- small box -->
+                        <div class="small-box bg-danger">
+                            <div class="inner">
+                                <h3>Экстренный</h3>
+                                <p> 0 </p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-pie-graph"></i>
+                            </div>
+                            <a href="{% url 'warehouse_v2:emergency' %}" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
