--- a/backend/apps/warehouse/templates/transfers/transfer_details.html
+++ b/backend/apps/warehouse/templates/transfers/transfer_details.html
@@ -72,7 +72,7 @@
                                         {% for i in details %}
                                             <tr>
                                             <td></td>
-                                            <td>{{ i.item.name }}</td>
+                                            <td>{{ i.item.item.name }}</td>
                                             <td>{{ i.expire_date }}</td>
                                             <td>{{ i.quantity }}</td>
                                             <td>{{ i.created_by }}</td>
