--- a/backend/apps/warehouse/templates/manual/main_screen.html
+++ b/backend/apps/warehouse/templates/manual/main_screen.html
@@ -74,7 +74,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="icon">
                                 <i class="ion ion-stats-bars"></i>
                             </div>
-                            <a href="#" class="small-box-footer">Подробнее <i
+                            <a href="{% url 'warehouse_manual:items' %}" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
