--- a/backend/apps/warehouse/templates/transfers/transfer_create.html
+++ b/backend/apps/warehouse/templates/transfers/transfer_create.html
@@ -98,6 +98,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <thead class="text-secondary">
                                 <th>Лекарства <span style="color: red;" class="required">*</span></th>
                                 <th>Количество <span style="color: red;" class="required">*</span></th>
+                                <th>Количество единиц <span style="color: red;" class="required">*</span></th>
                                 {#                                    <th>Срок годности <span style="color: red;" class="required">*</span></th>#}
                                 <th>Удалить(Не добавить) ?</th>
                                 <th>Удалить</th>
